Fix preview argument in in-code launcher